- Added fix that creates ``namespace_packages.txt`` for some packages with native namespaces which doesn't have it. - Removed fix of content of namespace ``__init__.py`` file.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,6 +9,7 @@ show-picked-versions = true
 parts =
     test
     twine
+    idea
 
 
 [test]
@@ -16,6 +17,7 @@ recipe = zc.recipe.egg:scripts
 eggs =
     cykooz.buildout.fixnamespace[test]
     ipython
+    google-auth
 
 
 [twine]
@@ -23,7 +25,7 @@ recipe = zc.recipe.egg:scripts
 eggs =
     setuptools
     wheel
-    twine<2.0
+    twine
     readme_renderer[md]
     check-manifest
     restview
@@ -32,3 +34,9 @@ scripts =
     check-manifest
     restview
 interpreter = python_twine
+
+
+[idea]
+recipe = cykooz.recipe.idea
+eggs =
+    ${test:eggs}
