--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -8,6 +8,8 @@ universal = 1
 
 [tool:pytest]
 testpaths = cykooz.buildout.fixnamespace
+markers =
+    now
 addopts = --pyargs --doctest-modules --doctest-ignore-import-errors
 #--aiohttp-loop=all
 python_files = tests.py test_*.py
