--- a/versions.cfg
+++ b/versions.cfg
@@ -1,134 +1,124 @@
 [versions]
-setuptools = 44.0.0
-zc.buildout = 2.13.3
 zc.recipe.egg = 2.0.7
+readme-renderer = 36
 
-ipython = 5.9.0
-# pytest<5.0 requires more-itertools<6.0.0,>=4.0.0
-more-itertools = 5.0
-# zipp 2+ do not support Python 2
-zipp = 1.2.0
-# mock 4+ do not support Python 2
-mock = 3.0.5
-# Pygments 2.6+ do not support Python 2
-Pygments = 2.5.2
-pytest = 4.6.9
-
-
-atomicwrites = 1.3.0
-attrs = 19.3.0
-bleach = 3.1.4
-certifi = 2020.4.5.1
-cffi = 1.14.0
-chardet = 3.0.4
-check-manifest = 0.41
-cmarkgfm = 0.4.2
-configparser = 5.0.0
-funcsigs = 1.0.2
-idna = 2.9
-importlib-metadata = 1.6.0
-manuel = 1.10.1
-pkginfo = 1.5.0.1
-pluggy = 0.13.1
-prompt-toolkit = 1.0.18
-ptyprocess = 0.6.0
-py = 1.8.1
-pyparsing = 2.4.7
-readme-renderer = 25.0
-requests = 2.23.0
-requests-toolbelt = 0.9.1
-restview = 2.9.2
-simplegeneric = 0.8.1
-tqdm = 4.45.0
-traitlets = 4.3.3
-twine = 1.15.0
-urllib3 = 1.25.8
-wheel = 0.34.2
+Pygments = 2.15.1
+SecretStorage = 3.3.3
+asttokens = 2.2.1
+bleach = 6.0.0
+build = 0.10.0
+certifi = 2023.5.7
+cffi = 1.15.1
+charset-normalizer = 3.2.0
+check-manifest = 0.49
+cmarkgfm = 2022.10.27
+cryptography = 41.0.2
+cykooz.recipe.idea = 0.4
+exceptiongroup = 1.1.2
+executing = 1.2.0
+idna = 3.4
+importlib-metadata = 6.8.0
+ipython = 8.14.0
+jedi = 0.18.2
+jeepney = 0.8.0
+keyring = 24.2.0
+manuel = 1.12.4
+markdown-it-py = 3.0.0
+mdurl = 0.1.2
+parso = 0.8.3
+pexpect = 4.8.0
+pkginfo = 1.9.6
+pluggy = 1.2.0
+prompt-toolkit = 3.0.39
+ptyprocess = 0.7.0
+pyproject-hooks = 1.0.0
+pytest = 7.4.0
+requests = 2.31.0
+requests-toolbelt = 1.0.0
+restview = 3.0.1
+rfc3986 = 2.0.0
+rich = 13.4.2
+traitlets = 5.9.0
+twine = 4.0.2
+urllib3 = 1.26.15
 zc.recipe.deployment = 1.3.0
 zc.zdaemonrecipe = 1.0.0
-zdaemon = 4.3
-zope.testing = 4.7
+zdaemon = 5.0
+zipp = 3.16.2
+zope.testing = 5.0.1
 
 # Required by:
 # bobo==2.3.0
-WebOb = 1.8.6
+WebOb = 1.8.7
 
 # Required by:
 # zc.zdaemonrecipe==1.0.0
-# zdaemon==4.3
-ZConfig = 3.5.0
+# zdaemon==5.0
+ZConfig = 4.0
 
 # Required by:
-# ipython==5.9.0
-backports.shutil-get-terminal-size = 1.0.0
+# ipython==8.14.0
+backcall = 0.2.0
 
 # Required by:
-# importlib-metadata==1.6.0
-# zipp==1.2.0
-contextlib2 = 0.6.0.post1
+# ipython==8.14.0
+decorator = 5.1.1
 
 # Required by:
-# ipython==5.9.0
-# traitlets==4.3.3
-decorator = 4.4.2
+# restview==3.0.1
+docutils = 0.20.1
 
 # Required by:
-# restview==2.9.2
-docutils = 0.16
+# pytest==7.4.0
+iniconfig = 2.0.0
 
 # Required by:
-# traitlets==4.3.3
-enum34 = 1.1.10
+# keyring==24.2.0
+jaraco.classes = 3.3.0
 
 # Required by:
-# traitlets==4.3.3
-ipython-genutils = 0.2.0
+# ipython==8.14.0
+matplotlib-inline = 0.1.6
 
 # Required by:
-# pytest==4.6.9
-packaging = 20.3
+# jaraco.classes==3.3.0
+more-itertools = 9.1.0
 
 # Required by:
-# importlib-metadata==1.6.0
-# ipython==5.9.0
-# pickleshare==0.7.5
-pathlib2 = 2.3.5
+# pytest==7.4.0
+packaging = 23.1
 
 # Required by:
-# check-manifest==0.41
-pep517 = 0.8.2
-
-# Required by:
-# ipython==5.9.0
-pexpect = 4.8.0
-
-# Required by:
-# ipython==5.9.0
+# ipython==8.14.0
 pickleshare = 0.7.5
 
 # Required by:
-# cffi==1.14.0
-pycparser = 2.20
+# stack-data==0.6.2
+pure-eval = 0.2.2
 
 # Required by:
-# pathlib2==2.3.5
-scandir = 1.10.0
+# cffi==1.15.1
+pycparser = 2.21
 
 # Required by:
-# pathlib2==2.3.5
-# readme-renderer==25.0
-# traitlets==4.3.3
-six = 1.14.0
+# asttokens==2.2.1
+# bobo==2.3.0
+# manuel==1.12.4
+# zc.recipe.deployment==1.3.0
+six = 1.16.0
 
 # Required by:
-# check-manifest==0.41
-toml = 0.10.0
+# ipython==8.14.0
+stack-data = 0.6.2
 
 # Required by:
-# prompt-toolkit==1.0.18
-# pytest==4.6.9
-wcwidth = 0.1.9
+# check-manifest==0.49
+tomli = 2.0.1
 
 # Required by:
-# bleach==3.1.4
+# prompt-toolkit==3.0.39
+wcwidth = 0.2.6
+
+# Required by:
+# bleach==6.0.0
 webencodings = 0.5.1
