--- a/versions.cfg
+++ b/versions.cfg
@@ -1,50 +1,50 @@
 [versions]
 zc.recipe.egg = 2.0.7
-readme-renderer = 36
 
-Pygments = 2.15.1
 SecretStorage = 3.3.3
-asttokens = 2.2.1
-bleach = 6.0.0
-build = 0.10.0
-certifi = 2023.5.7
-cffi = 1.15.1
-charset-normalizer = 3.2.0
+asttokens = 2.4.1
+build = 1.2.1
+certifi = 2024.2.2
+cffi = 1.16.0
+charset-normalizer = 3.3.2
 check-manifest = 0.49
-cmarkgfm = 2022.10.27
-cryptography = 41.0.2
+cmarkgfm = 2024.1.14
+cryptography = 42.0.5
 cykooz.recipe.idea = 0.4
-exceptiongroup = 1.1.2
-executing = 1.2.0
-idna = 3.4
-importlib-metadata = 6.8.0
-ipython = 8.14.0
-jedi = 0.18.2
+docutils = 0.21.1
+executing = 2.0.1
+idna = 3.7
+importlib-metadata = 7.1.0
+ipython = 8.23.0
+jedi = 0.19.1
 jeepney = 0.8.0
-keyring = 24.2.0
+keyring = 25.1.0
 manuel = 1.12.4
 markdown-it-py = 3.0.0
 mdurl = 0.1.2
-parso = 0.8.3
-pexpect = 4.8.0
-pkginfo = 1.9.6
-pluggy = 1.2.0
-prompt-toolkit = 3.0.39
+nh3 = 0.2.17
+parso = 0.8.4
+pexpect = 4.9.0
+pkginfo = 1.10.0
+pluggy = 1.4.0
+prompt-toolkit = 3.0.43
 ptyprocess = 0.7.0
+pygments = 2.17.2
 pyproject-hooks = 1.0.0
-pytest = 7.4.0
+pytest = 8.1.1
+readme-renderer = 43.0
 requests = 2.31.0
 requests-toolbelt = 1.0.0
-restview = 3.0.1
 rfc3986 = 2.0.0
-rich = 13.4.2
-traitlets = 5.9.0
-twine = 4.0.2
-urllib3 = 1.26.15
+rich = 13.7.1
+six = 1.16.0
+traitlets = 5.14.2
+twine = 5.0.0
+urllib3 = 2.2.1
 zc.recipe.deployment = 1.3.0
 zc.zdaemonrecipe = 1.0.0
 zdaemon = 5.0
-zipp = 3.16.2
+zipp = 3.18.1
 zope.testing = 5.0.1
 
 # Required by:
@@ -57,68 +57,66 @@ WebOb = 1.8.7
 ZConfig = 4.0
 
 # Required by:
-# ipython==8.14.0
-backcall = 0.2.0
+# jaraco.context==5.3.0
+backports.tarfile = 1.0.0
 
 # Required by:
-# ipython==8.14.0
+# ipython==8.23.0
 decorator = 5.1.1
 
 # Required by:
-# restview==3.0.1
-docutils = 0.20.1
+# ipython==8.23.0
+exceptiongroup = 1.2.0
 
 # Required by:
-# pytest==7.4.0
+# pytest==8.1.1
 iniconfig = 2.0.0
 
 # Required by:
-# keyring==24.2.0
-jaraco.classes = 3.3.0
+# keyring==25.1.0
+jaraco.classes = 3.4.0
 
 # Required by:
-# ipython==8.14.0
+# keyring==25.1.0
+jaraco.context = 5.3.0
+
+# Required by:
+# keyring==25.1.0
+jaraco.functools = 4.0.0
+
+# Required by:
+# ipython==8.23.0
 matplotlib-inline = 0.1.6
 
 # Required by:
-# jaraco.classes==3.3.0
-more-itertools = 9.1.0
+# jaraco.classes==3.4.0
+# jaraco.functools==4.0.0
+more-itertools = 10.2.0
 
 # Required by:
-# pytest==7.4.0
-packaging = 23.1
+# pytest==8.1.1
+packaging = 24.0
 
 # Required by:
-# ipython==8.14.0
-pickleshare = 0.7.5
-
-# Required by:
-# stack-data==0.6.2
+# stack-data==0.6.3
 pure-eval = 0.2.2
 
 # Required by:
-# cffi==1.15.1
-pycparser = 2.21
+# cffi==1.16.0
+pycparser = 2.22
 
 # Required by:
-# asttokens==2.2.1
-# bobo==2.3.0
-# manuel==1.12.4
-# zc.recipe.deployment==1.3.0
-six = 1.16.0
-
-# Required by:
-# ipython==8.14.0
-stack-data = 0.6.2
+# ipython==8.23.0
+stack-data = 0.6.3
 
 # Required by:
 # check-manifest==0.49
 tomli = 2.0.1
 
 # Required by:
-# prompt-toolkit==3.0.39
-wcwidth = 0.2.6
+# ipython==8.23.0
+typing-extensions = 4.11.0
 
 # Required by:
-# bleach==6.0.0
-webencodings = 0.5.1
+# prompt-toolkit==3.0.43
+wcwidth = 0.2.13
